--- a/css/styles.css
+++ b/css/styles.css
@@ -209,12 +209,11 @@ header {
   background-position: 50% 50%;
   line-height: 1.36;
   letter-spacing: 0.06em;
-  text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
 }
 
-.hero h1 {
+.hero-h1 {
   width: 696px;
   font-size: 44px;
   font-weight: 900;
@@ -222,6 +221,7 @@ header {
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   text-transform: uppercase;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
@@ -270,11 +270,125 @@ header {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
-  padding: 15px;
   background-color: var(--primary-white-color);
   border-radius: 4px;
-  justify-content: center;
-  align-items: center;
+  padding: 40px;
+}
+
+.modal-form {
+width: 100%;
+}
+
+.modal-label-list p {
+  margin-bottom: 4px;
+}
+
+.modal h1 {
+font-weight: 700;
+font-size: 20px;
+line-height: 23px;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-text-color);
+margin-bottom: 12px;
+}
+
+.modal-label {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal-label p {
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+}
+
+.modal-input {
+  width: 100%;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+height: 40px;
+margin-bottom: 10px;
+padding-left: 42px;
+}
+
+.modal-label:hover,
+.modal-label:focus{
+  fill: var(--accent-text-color);
+}
+
+.modal-label:hover > .modal-input,
+.modal-label:focus > .modal-input {
+  border-color: var(--accent-text-color);
+}
+
+.checkbox {
+  appearance: none;
+}
+
+.modal-svg {
+position: absolute;
+left: 14px;
+top: 28px;
+}
+
+.modal-comment {
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+}
+
+.modal-comment::placeholder {
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-checkbox-label {
+  display: flex;
+  position: relative;
+}
+
+.checkbox-modal-svg {
+  position: absolute;
+  left: 12px;
+  bottom: 5px;
+}
+
+.checked {
+  visibility: hidden;
+}
+
+.checkbox:checked + .checkbox-modal-svg{
+  visibility: hidden;
+}
+
+.checkbox:checked ~ .checkbox-modal-svg.checked{
+  visibility: visible;
+}
+
+
+.modal-checkbox-label p {
+font-size: 14px;
+line-height: 171%;
+letter-spacing: 0.03em;
+margin-right: 11px;
+margin-left: auto;
+}
+
+.modal-checkbox-label a{
+  text-decoration: underline;
+  color: var(--accent-text-color)
+}
+
+.modal .submit-button {
+  padding: 10px 55px;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-left: auto;
 }
 
 .close-btn {
@@ -289,6 +403,11 @@ header {
   align-items: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--primary-white-color);
+}
+
+.close-modal-svg:hover,
+.close-modal-svg:focus {
+  fill: var(--accent-text-color)
 }
 
 /* Qalities section styles */
@@ -598,9 +717,8 @@ footer p {
 .submit-button {
   background-color: var(--accent-text-color);
   color: var(--primary-white-color);
-  left: 370px;
-  width: 200px;
-  height: 50px;
+  min-width: 200px;
+  min-height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
@@ -610,6 +728,10 @@ footer p {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+  border: none;
+}
+
+footer .submit-button {
   padding: 10px 28px;
 }
 
