--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,10 @@ border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--accent-text-color);
 }
 
+.modal-input:focus {
+  border-color: var(--accent-text-color);
+}
+
 .checkbox {
   appearance: none;
 }
