--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,8 @@ border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 height: 40px;
 padding-left: 42px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-svg {
@@ -325,6 +326,7 @@ padding-left: 42px;
 }
 
 .modal-label:hover > span > .modal-input{
+  outline: 1px solid var(--accent-text-color);
   border-color: var(--accent-text-color);
 }
 
@@ -333,6 +335,7 @@ padding-left: 42px;
 }
 
 .modal-input:focus {
+  outline: 1px solid var(--accent-text-color);
   border-color: var(--accent-text-color);
 }
 
